ant/src/main/java/com/compile/hello/HelloParser.java
// Generated from D:/compile/ant/src/main/resources/Hello.g4 by ANTLR 4.13.1

    package com.compile.hello;
    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, IFTK=9, 
		WHILETK=10, ELSETK=11, CONSTTK=12, CHARTK=13, VOIDTK=14, MAINTK=15, INTTK=16, 
		DOTK=17, FORTK=18, SCANFTK=19, PRINTFTK=20, RETURNTK=21, DecimalConst=22, 
		OctalConst=23, Hexadecimal=24, ASSIGN=25, LSS=26, LEQ=27, GRE=28, GEQ=29, 
		EQL=30, NEQ=31, MULT=32, DIV=33, PLUS=34, MINUS=35, SEMICN=36, COMMA=37, 
		LPARENT=38, RPARENT=39, RBRACK=40, LBRACK=41, LBRACE=42, RBRACE=43, IDENTR=44, 
		ILLEGALIDENTR=45, Whitespace=46, Newline=47, OneLineComment=48, MultiLineComment=49, 
		ErrMultiLineCommentMissingEnd=50;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_declarationStatement = 2, RULE_declaratorList = 3, 
		RULE_comparementStatement = 4, RULE_whileStatement = 5, RULE_compoundStatement = 6, 
		RULE_ifStatement = 7, RULE_expression = 8, RULE_literal = 9, RULE_declarator = 10, 
		RULE_typeSpecifier = 11, RULE_assignmentExpression = 12, RULE_assignmentOperator = 13, 
		RULE_compareOperator = 14, RULE_additiveExpression = 15, RULE_multiplicativeExpression = 16, 
		RULE_primaryExpression = 17, RULE_argumentExpressionList = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "declarationStatement", "declaratorList", "comparementStatement", 
			"whileStatement", "compoundStatement", "ifStatement", "expression", "literal", 
			"declarator", "typeSpecifier", "assignmentExpression", "assignmentOperator", 
			"compareOperator", "additiveExpression", "multiplicativeExpression", 
			"primaryExpression", "argumentExpressionList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&&'", "'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'%'", 
			"'if'", "'while'", "'else'", "'const'", "'char'", "'void'", "'main'", 
			"'int'", "'do'", "'for'", "'scanf'", "'printf'", "'return'", null, null, 
			null, "'='", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'*'", "'/'", 
			"'+'", "'-'", "';'", "','", "'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "IFTK", "WHILETK", 
			"ELSETK", "CONSTTK", "CHARTK", "VOIDTK", "MAINTK", "INTTK", "DOTK", "FORTK", 
			"SCANFTK", "PRINTFTK", "RETURNTK", "DecimalConst", "OctalConst", "Hexadecimal", 
			"ASSIGN", "LSS", "LEQ", "GRE", "GEQ", "EQL", "NEQ", "MULT", "DIV", "PLUS", 
			"MINUS", "SEMICN", "COMMA", "LPARENT", "RPARENT", "RBRACK", "LBRACK", 
			"LBRACE", "RBRACE", "IDENTR", "ILLEGALIDENTR", "Whitespace", "Newline", 
			"OneLineComment", "MultiLineComment", "ErrMultiLineCommentMissingEnd"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public class Quadruple {
	        public int address;
	        public String operator;
	        public String arg1;
	        public String arg2;
	        public String result;

	        Quadruple(int address, String operator, String arg1, String arg2, String result) {
	            this.address = address;
	            this.operator = operator;
	            this.arg1 = arg1;
	            this.arg2 = arg2;
	            this.result = result;
	        }
	    }

	    static List<Quadruple> quadruples = new ArrayList<>();
	    public static List<Quadruple> getquadruples(){
	        return quadruples;
	    }
	    static int tempCount = 0;
	    static int address = 100;


	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 22265139897856L) != 0)) {
				{
				{
				setState(38);
				statement();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public int Ebegin;
		public int Etrue;
		public int Efalse;
		public ExpressionContext expression;
		public IfStatementContext ifStatement;
		public ComparementStatementContext comparementStatement;
		public CompoundStatementContext compoundStatement;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICN() { return getToken(HelloParser.SEMICN, 0); }
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public DeclarationStatementContext declarationStatement() {
			return getRuleContext(DeclarationStatementContext.class,0);
		}
		public ComparementStatementContext comparementStatement() {
			return getRuleContext(ComparementStatementContext.class,0);
		}
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((StatementContext)_localctx).expression = expression(0);
				setState(46);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(45);
					match(SEMICN);
					}
					break;
				}

				        ((StatementContext)_localctx).Ebegin =  ((StatementContext)_localctx).expression.Ebegin;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				((StatementContext)_localctx).ifStatement = ifStatement();
				setState(52);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(51);
					match(SEMICN);
					}
					break;
				}

				        ((StatementContext)_localctx).Ebegin =  ((StatementContext)_localctx).ifStatement.Ebegin;
				        ((StatementContext)_localctx).Etrue =  ((StatementContext)_localctx).ifStatement.Etrue;
				        ((StatementContext)_localctx).Efalse =  ((StatementContext)_localctx).ifStatement.Efalse;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(56);
				declarationStatement();
				setState(57);
				match(SEMICN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				((StatementContext)_localctx).comparementStatement = comparementStatement(0);
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(60);
					match(SEMICN);
					}
					break;
				}

				        ((StatementContext)_localctx).Ebegin =  ((StatementContext)_localctx).comparementStatement.Ebegin;
				        ((StatementContext)_localctx).Etrue =  ((StatementContext)_localctx).comparementStatement.Etrue;
				        ((StatementContext)_localctx).Efalse =  ((StatementContext)_localctx).comparementStatement.Efalse;
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				((StatementContext)_localctx).compoundStatement = compoundStatement();
				setState(67);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(66);
					match(SEMICN);
					}
					break;
				}

				        ((StatementContext)_localctx).Ebegin =  ((StatementContext)_localctx).compoundStatement.Ebegin;
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(71);
				whileStatement();
				setState(73);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(72);
					match(SEMICN);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationStatementContext extends ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return getRuleContext(TypeSpecifierContext.class,0);
		}
		public DeclaratorListContext declaratorList() {
			return getRuleContext(DeclaratorListContext.class,0);
		}
		public DeclarationStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterDeclarationStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitDeclarationStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitDeclarationStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationStatementContext declarationStatement() throws RecognitionException {
		DeclarationStatementContext _localctx = new DeclarationStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarationStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			typeSpecifier();
			setState(78);
			declaratorList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaratorListContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(HelloParser.COMMA, 0); }
		public DeclaratorListContext declaratorList() {
			return getRuleContext(DeclaratorListContext.class,0);
		}
		public DeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaratorList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterDeclaratorList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitDeclaratorList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaratorListContext declaratorList() throws RecognitionException {
		DeclaratorListContext _localctx = new DeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaratorList);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				declarator();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				declarator();
				setState(82);
				match(COMMA);
				setState(83);
				declaratorList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComparementStatementContext extends ParserRuleContext {
		public int Ebegin;
		public int Etrue;
		public int Efalse;
		public ComparementStatementContext left2;
		public ComparementStatementContext left3;
		public ExpressionContext left;
		public CompareOperatorContext compareOperator;
		public ExpressionContext right;
		public ComparementStatementContext right2;
		public ComparementStatementContext right3;
		public CompareOperatorContext compareOperator() {
			return getRuleContext(CompareOperatorContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ComparementStatementContext> comparementStatement() {
			return getRuleContexts(ComparementStatementContext.class);
		}
		public ComparementStatementContext comparementStatement(int i) {
			return getRuleContext(ComparementStatementContext.class,i);
		}
		public ComparementStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparementStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterComparementStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitComparementStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitComparementStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparementStatementContext comparementStatement() throws RecognitionException {
		return comparementStatement(0);
	}

	private ComparementStatementContext comparementStatement(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ComparementStatementContext _localctx = new ComparementStatementContext(_ctx, _parentState);
		ComparementStatementContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_comparementStatement, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			((ComparementStatementContext)_localctx).left = expression(0);
			setState(89);
			((ComparementStatementContext)_localctx).compareOperator = compareOperator();
			setState(90);
			((ComparementStatementContext)_localctx).right = expression(0);

			        quadruples.add(new Quadruple(address,"j"+(((ComparementStatementContext)_localctx).compareOperator!=null?_input.getText(((ComparementStatementContext)_localctx).compareOperator.start,((ComparementStatementContext)_localctx).compareOperator.stop):null), ((ComparementStatementContext)_localctx).left.op, ((ComparementStatementContext)_localctx).right.op, null));
			        ((ComparementStatementContext)_localctx).Etrue =  address;
			        ((ComparementStatementContext)_localctx).Ebegin =  address;
			        address += 1;
			        quadruples.add(new Quadruple(address,"jump", null, null, null));
			        ((ComparementStatementContext)_localctx).Efalse =  address;
			        address += 1;

			    
			}
			_ctx.stop = _input.LT(-1);
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(103);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new ComparementStatementContext(_parentctx, _parentState);
						_localctx.left2 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_comparementStatement);
						setState(93);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(94);
						match(T__0);
						setState(95);
						((ComparementStatementContext)_localctx).right2 = comparementStatement(3);

						                  int temp1 = ((ComparementStatementContext)_localctx).right2.Etrue;
						                  ((ComparementStatementContext)_localctx).Etrue =  temp1;
						                  int temp2 = ((ComparementStatementContext)_localctx).left2.Efalse;
						                  ((ComparementStatementContext)_localctx).Efalse =  temp2;
						                  ((ComparementStatementContext)_localctx).Ebegin =  ((ComparementStatementContext)_localctx).left2.Ebegin;
						                  for (Quadruple quadruple : quadruples) {
						                      if(((ComparementStatementContext)_localctx).left2.Etrue == quadruple.address){
						                          quadruple.result = String.valueOf(((ComparementStatementContext)_localctx).right2.Ebegin);
						                      }
						                      if(((ComparementStatementContext)_localctx).right2.Efalse == quadruple.address){
						                          quadruple.result = String.valueOf(((ComparementStatementContext)_localctx).left2.Ebegin);
						                      }
						                  }
						              
						}
						break;
					case 2:
						{
						_localctx = new ComparementStatementContext(_parentctx, _parentState);
						_localctx.left3 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_comparementStatement);
						setState(98);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(99);
						match(T__1);
						setState(100);
						((ComparementStatementContext)_localctx).right3 = comparementStatement(2);

						                  int temp1 = ((ComparementStatementContext)_localctx).left3.Etrue;
						                  ((ComparementStatementContext)_localctx).Etrue =  temp1;
						                  int temp2 = ((ComparementStatementContext)_localctx).right3.Efalse;
						                  ((ComparementStatementContext)_localctx).Efalse =  temp2;
						                  ((ComparementStatementContext)_localctx).Ebegin =  ((ComparementStatementContext)_localctx).left3.Ebegin;
						                  for (Quadruple quadruple : quadruples) {
						                      if(((ComparementStatementContext)_localctx).right3.Etrue == quadruple.address){
						                          quadruple.result = String.valueOf(((ComparementStatementContext)_localctx).left3.Ebegin);
						                      }
						                      if(((ComparementStatementContext)_localctx).left3.Efalse == quadruple.address){
						                          quadruple.result = String.valueOf(((ComparementStatementContext)_localctx).right3.Ebegin);
						                      }
						                  }
						              
						}
						break;
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStatementContext extends ParserRuleContext {
		public int Ebegin;
		public int Etrue;
		public int Efalse;
		public StatementContext left;
		public StatementContext right;
		public TerminalNode WHILETK() { return getToken(HelloParser.WHILETK, 0); }
		public TerminalNode LPARENT() { return getToken(HelloParser.LPARENT, 0); }
		public TerminalNode RPARENT() { return getToken(HelloParser.RPARENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterWhileStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitWhileStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitWhileStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
